# Drona

./: .gitignore  Dockerfile  README.md  requirements.txt
install/: local_setup.sh  setup.sh
install/sjtu_drone_bringup/lib/sjtu_drone_bringup/: rosgpt  rosgpt_client_node  rosgptparser_turtlesim  spawn_drone
install/sjtu_drone_bringup/share/sjtu_drone_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sjtu_drone_description/include/: pid_controller.h  plugin_drone.h
install/sjtu_drone_description/share/sjtu_drone_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/sjtu_drone/rosgpt/: package.xml  setup.py
src/sjtu_drone/rosgpt/rosgpt/: requirements.txt  rosgpt.py  rosgpt_client.py  rosgptparser_drone.py  rosgptparser_drone_cont.py
src/sjtu_drone/rosgpt/rosgpt/agent/: rosgpt.py
src/sjtu_drone/rosgpt/rosgpt/ros-agent/: tools.py
src/sjtu_drone/rosgpt/rosgpt/ros_agent/: __init__.py  agent.py  tools.py
src/sjtu_drone/rosgpt/webapp/: index.html  package-lock.json  package.json  script.js
src/sjtu_drone/rosgpt/webapp/src/app/: Compass.tsx  TimeComponent.tsx  ToastContainerWrap.tsx  TrendingQuestions.tsx  globals.css  layout.tsx  page.tsx
src/sjtu_drone/sjtu_drone_bringup/: setup.py
src/sjtu_drone/sjtu_drone_bringup/launch/: sjtu_drone_bringup.launch.py  sjtu_drone_gazebo.launch.py
src/sjtu_drone/sjtu_drone_bringup/sjtu_drone_bringup/: rosgpt.py  rosgpt_client_node.py  (+2 more)
(+32 files in other folders)
